[project]
name = "agent-v3"
version = "0.1.0"
description = "Pure ReAct OPG Agent based on LangChain create_agent (no preprocessing pipeline, fully autonomous decision making)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1",
  "httpx>=0.27.0",
  "pillow>=10.0.0",
  "langchain==1.2.7",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "langgraph>=0.2.0",
  "langsmith>=0.1.0",
  "dashscope>=1.25.9",
  "shapely>=2.0.0",
  "numpy>=1.24.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
